# Daylog

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md  RENAME_PLAN.md  THIRD-PARTY-NOTICES.md  TODOS.md  index.html  package.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml  renovate.json
.github/workflows/: ci.yml  release.yml
crates/daylog/: Cargo.toml  DESIGN.md  README.md
crates/daylog-core/: Cargo.toml  README.md
crates/daylog-core/src/: aggregate.rs  aw_client.rs  categories.rs  datastore.rs  kpi.rs  lib.rs  paths.rs  queries.rs  snapshot.rs  time.rs  transforms.rs
crates/daylog-tui/: Cargo.toml  DESIGN.md
crates/daylog-tui/src/: app.rs  data.rs  lib.rs  theme.rs  ui.rs
crates/daylog-tui/src/ui/: kpi_strip.rs  month.rs  overview.rs  sparkline.rs  timeline.rs  week.rs
crates/daylog/services/: daylog-aw-server.service.tmpl  daylog-awatcher.service.tmpl  daylog-supervisor.sh.tmpl
crates/daylog/src/: app.rs  cache.rs  data.rs  lib.rs  main.rs  theme.rs  ui.rs  update_check.rs  wizard.rs
crates/daylog/src/data/: aggregate.rs  aw_client.rs  categories.rs  datastore.rs  kpi.rs  mod.rs  paths.rs  queries.rs  snapshot.rs  time.rs  transforms.rs
crates/daylog/src/tracking/: download.rs  gnome.rs  install.rs  lifecycle.rs  mod.rs  pins.rs  systemd.rs  xdg_autostart.rs
crates/daylog/src/ui/: kpi_strip.rs  month.rs  overview.rs  sparkline.rs  stacked_bars.rs  timeline.rs  week.rs
packaging/aur/: .SRCINFO  PKGBUILD  README.md
scripts/: bump-binary.sh  fetch-binaries.sh  postinst.sh  prerm.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/services/: daylog-tracker.desktop.tmpl  pulse-aw-server.service.tmpl  pulse-awatcher.service.tmpl  pulse-supervisor.sh.tmpl  pulse-tracker.desktop.tmpl
src-tauri/src/: aggregate.rs  aw_client.rs  categories.rs  icons.rs  lib.rs  main.rs  time.rs
src-tauri/src/tracking/: gnome.rs  install.rs  lifecycle.rs  mod.rs  systemd.rs  xdg_autostart.rs
src/components/: Sparkline.tsx
src/components/layout/: Sidebar.tsx  Topbar.tsx
src/components/palette/: CommandPalette.tsx  commands.ts
src/components/widgets/: ActivityLog.tsx  Card.tsx  CurrentFocus.tsx  HourlyDistribution.tsx  KpiStrip.tsx  NotableToday.tsx  Timeline.tsx  TopApps.tsx  TopCategories.tsx  WebPanel.tsx  WeekChart.tsx  WeekHeatmap.tsx
src/components/wizard/: WizardShell.tsx
src/context/: PageContext.tsx  RangeContext.tsx
src/hooks/: useAw.ts  useFirstLaunch.ts  useHotkey.ts
src/lib/: anomaly.test.ts  anomaly.ts  aw-types.ts  aw.ts  baselines.test.ts  baselines.ts  best-window.test.ts  best-window.ts  cadence.test.ts  cadence.ts  category-colors.ts  format.ts  kpi.ts  nav.ts  productive.ts  timeline.ts  tracking.ts
src/pages/: ActivityLogPage.tsx  AppsPage.tsx  CategoriesPage.tsx  HourlyPatternsPage.tsx  MonthPage.tsx  Overview.tsx  Placeholder.tsx  WebPage.tsx  WeekPage.tsx  Wizard.tsx
