[workspace]
members = ["crates/daylog"]
resolver = "2"

# Shared dependency versions. The Tauri shell crate previously lived at
# `src-tauri/` and pulled in tokio's `process` feature; the TUI does not
# need it, so feature opt-in stays per-crate.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.44", features = ["serde"] }
tokio = { version = "1.52.3" }
thiserror = "2.0.18"
reqwest = { version = "0.13.3", features = ["json", "query"] }
