[package]
name = "daylog"
version = "0.1.0"
description = "See how you spent your time on your computer"
authors = ["Manas Kenge"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "daylog_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.3", features = ["json", "query"] }
tokio = { version = "1.52.2", features = ["rt-multi-thread", "macros", "process", "time"] }
chrono = { version = "0.4.44", features = ["serde"] }
thiserror = "2.0.18"
regex = { version = "1.12.3", features = ["unicode-case"] }
freedesktop_entry_parser = "1.3"
freedesktop-icons = "0.4"
base64 = "0.22"

