[package]
name = "daylog"
version = "0.1.2"
description = "See how you spent your time on your computer"
authors = ["Manas Kenge"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "daylog_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
daylog-core = { path = "../crates/daylog-core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "process", "time"] }
thiserror = { workspace = true }
freedesktop_entry_parser = "1.3"
freedesktop-icons = "0.4"
base64 = "0.22"
