[package]
name = "daylog-core"
version = "0.1.7"
edition = "2021"
description = "Shared data layer for the daylog screen-time tracker: aw-server client, aggregations, categories, time ranges"
license = "MIT"
repository = "https://github.com/Manas-Kenge/Daylog"
homepage = "https://github.com/Manas-Kenge/Daylog"
readme = "README.md"
keywords = ["screen-time", "time-tracking", "productivity"]
categories = ["api-bindings"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
thiserror = { workspace = true }
reqwest = { workspace = true }
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
fancy-regex = "0.13"
url = "2"
