[package]
name = "daylog-tui"
version = "0.1.5"
edition = "2021"
description = "Terminal screen-time and activity tracker for Linux"
license = "MIT"
repository = "https://github.com/Manas-Kenge/Daylog"
homepage = "https://github.com/Manas-Kenge/Daylog"
readme = "README.md"
keywords = ["screen-time", "tui", "time-tracking", "productivity", "terminal"]
categories = ["command-line-utilities"]

# The crates.io name is `daylog-tui` (the bare `daylog` is taken by an
# unrelated project). The user-facing binary keeps the short `daylog`
# name — `cargo install daylog-tui` puts a `daylog` executable on $PATH.
[[bin]]
name = "daylog"
path = "src/main.rs"

[dependencies]
daylog-core = { path = "../daylog-core", version = "0.1.5" }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
throbber-widgets-tui = "0.8"
tachyonfx = "0.9"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "signal", "time", "process"] }
tokio-stream = "0.1"
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
dirs = "5"
reqwest = { workspace = true, features = ["stream"] }
sha2 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
futures-util = "0.3"

# --- Distribution packaging --------------------------------------------------
# `cargo deb` and `cargo generate-rpm` read these blocks. They have no effect
# on `cargo build`, `cargo install`, or `cargo publish`.

[package.metadata.deb]
name = "daylog"
maintainer = "Manas Kenge <Manas-Kenge@users.noreply.github.com>"
license-file = ["../../LICENSE", "0"]
section = "utils"
priority = "optional"
extended-description = """\
Daylog is a Linux terminal screen-time tracker. It runs entirely on \
your machine — no cloud, no sign-in, no telemetry. On first launch it \
offers to install a userspace activity tracker; from then on it \
surfaces 24-hour timelines, top apps, categories, and domains for \
today, this week, and this month."""
assets = [
    ["../../target/release/daylog", "usr/bin/", "755"],
    ["../../README.md", "usr/share/doc/daylog/README", "644"],
]

[package.metadata.generate-rpm]
name = "daylog"
assets = [
    { source = "../../target/release/daylog", dest = "/usr/bin/daylog", mode = "755" },
    { source = "../../README.md", dest = "/usr/share/doc/daylog/README", mode = "644", doc = true },
    { source = "../../LICENSE", dest = "/usr/share/licenses/daylog/LICENSE", mode = "644" },
]
